<resources>
    <string name="app_name">I Am An Nitian</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!--============== Welcome Screen Strings =================-->
    <string name="login_or_signup">Log in Or sign up</string>
    <string name="facebook">Continue With facebook</string>
    <string name="google">Continue With Google</string>

    <!--============== Login Strings =================-->
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="email_phone_hint">Email or Phone</string>
    <string name="pass_hint">Password</string>
    <string name="pass_forg">forgot password?</string>
    <string name="not_have_account">Don\'t have an account?</string>

    <!--============== Signup Strings =================-->
    <string name="name_hint">User Name</string>
    <string name="email_hint">Email</string>
    <string name="signup_space">Sign Up</string>
    <string name="already_memeber">Already a member?</string>

    <!--============== Splash Strings =================-->
    <string name="splash_msg">Connecting Nitians</string>

    <!--========= Content Description Strings ==========-->
    <string name="cnt_desp">NIT SXR</string>

    <!--========= Drawer Headers Strings ==========-->
    <string name="user_name">Shubham Maurya</string>
    <string name="nit_name">NIT Srinagar</string>

</resources>
