<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/bannermain">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_height="match_parent">

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_profilepic"
            android:contentDescription="@string/cnt_desp" />


    </LinearLayout>

    <LinearLayout
        android:paddingTop="14dp"
        android:paddingEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingStart="5dp"
        >

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_marginTop="1dp"
            android:id="@+id/nit_name"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/nit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>