<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".SignupActivity">

    <RelativeLayout
        android:layout_marginLeft="-45dp"
        android:layout_marginTop="-50dp"
        android:stateListAnimator="@null"
        android:background="@drawable/top"
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="240dp">

        <TextView
            android:layout_marginLeft="68dp"
            android:layout_centerVertical="true"
            android:fontFamily="@font/roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello,"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:id="@+id/top_text"
            />

        <TextView
            android:layout_marginLeft="68dp"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:layout_below="@id/top_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up!"
            />

    </RelativeLayout>

    <LinearLayout
        android:paddingTop="160dp"
        android:layout_centerInParent="true"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <EditText
        android:stateListAnimator="@null"
        android:textColor="?attr/textColor"
        android:textColorHint="?attr/hintColor"
        android:fontFamily="@font/work_sans"
        android:inputType="text"
        android:textSize="18sp"
        android:id="@+id/username"
        android:hint="@string/name_hint"
        android:drawableStart="@drawable/user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/myinput"
        android:drawablePadding="10dp"
        android:layout_marginTop="20dp"
        android:autofillHints="" />

    <EditText
        android:stateListAnimator="@null"
        android:textColor="?attr/textColor"
        android:textColorHint="?attr/hintColor"
        android:fontFamily="@font/work_sans"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:id="@+id/email"
        android:hint="@string/email_hint"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="10dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="9dp"
        android:background="@drawable/myinput"
        android:layout_marginTop="20dp"
        android:autofillHints="" />


    <EditText
        android:stateListAnimator="@null"
        android:textColor="?attr/textColor"
        android:textColorHint="?attr/hintColor"
        android:fontFamily="@font/work_sans"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:id="@+id/password"
        android:hint="@string/pass_hint"
        android:drawableStart="@drawable/lock"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/myinput"
        android:drawablePadding="8dp"
        android:layout_marginTop="20dp"
        android:autofillHints="" />

    <Button
        android:stateListAnimator="@null"
        android:fontFamily="@font/work_sans_semibold"
        android:textColor="@color/white"
        android:id="@+id/click_to_sign_up"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/mybutton"
        android:layout_marginTop="30dp"
        android:text="@string/signup_space"
        android:textSize="16sp"
        />


    <TextView
        android:textColor="?attr/textColor"
        android:fontFamily="@font/work_sans_semibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_memeber"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:layout_gravity="center"
        />

    <TextView
        android:fontFamily="@font/work_sans_semibold"
        android:id="@+id/go_to_login"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        />

    </LinearLayout>
</RelativeLayout>